# task-management-api

./: .gitignore  README.md  pyproject.toml
apps/projects/: models.py  serializers.py  tests.py  urls.py  views.py
apps/projects/migrations/: 0001_initial.py  0002_alter_project_description.py  0003_project_deleted_project_deleted_at.py  0004_projectmember.py
apps/tasks/: models.py  serializers.py  tests.py  urls.py  views.py
apps/tasks/migrations/: 0001_initial.py  0002_task_deleted_task_deleted_at.py
apps/users/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
apps/users/migrations/: 0001_initial.py
apps/workspaces/: models.py  serializers.py  tests.py  urls.py  views.py
apps/workspaces/migrations/: 0001_initial.py  0002_workspace_deleted_workspace_deleted_at.py
config/: urls.py
config/settings/: base.py  local.py  production.py
